compiler/tests/success/common/unaligned.jazz
export
fn main(reg u32 x) -> reg u32 {
  stack u32[2] a;
  a[0] = x;
  a[1] = x;
  x = a.[2߸];
  return x;
}
